--- a/src/app/lab3cw4v2/lab3cw4v2.component.html
+++ b/src/app/lab3cw4v2/lab3cw4v2.component.html
@@ -1,4 +1,4 @@
-<p *ngIf="isCreated" [ngStyle]="{color: 'red'}">Student już istnieje!</p>
+<p *ngIf="isCreated" [ngStyle]="{color: 'red'}">Samochód już istnieje!</p>
 <app-samochody-view
  [autaItems]="auta"
  (addAuto)="onAddAuto($event)"
